[project]
name = "tgbot"
version = "0.1.0"
description = ""
authors = [
    {name = "Ali Kozhabay",email = "a.kozhabay@globerce.capital"}
]
package-mode= false
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "pyrogram (>=2.0.106,<3.0.0)",
    "tgcrypto (>=1.2.5,<2.0.0)",
    "moviepy (==1.0.3)",
    "imageio (>=2.37.2,<3.0.0)",
    "imageio-ffmpeg (>=0.6.0,<0.7.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "telethon (>=1.42.0,<2.0.0)",
    "fastapi (>=0.121.2,<0.122.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "openai-whisper (>=20250625,<20250626)",
    "openai (>=2.8.1,<3.0.0)",
    "reportlab (>=4.4.5,<5.0.0)",
    "deep-translator (>=1.11.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
